RESOLVED FIXED75633
REGRESSION (r104060): Layout Test fast/media/viewport-media-query.html is occasionally failing
https://bugs.webkit.org/show_bug.cgi?id=75633
Summary REGRESSION (r104060): Layout Test fast/media/viewport-media-query.html is occ...
Dmitry Lomov
Reported 2012-01-05 11:07:05 PST
The following layout test is failing on chromium fast/media/viewport-media-query.html Probable cause: http://trac.webkit.org/changeset/104060/
Attachments
patch, with a reliable test case (5.54 KB, patch)
2012-01-07 09:56 PST, Antti Koivisto
kling: review+
Dmitry Lomov
Comment 1 2012-01-05 11:16:07 PST
Antti Koivisto
Comment 2 2012-01-06 10:12:30 PST
I can't repro on OSX and code inspection didn't reveal why this would be happening. Is this easy to repro on Chromium?
Antti Koivisto
Comment 3 2012-01-07 04:31:41 PST
*** Bug 75772 has been marked as a duplicate of this bug. ***
Antti Koivisto
Comment 4 2012-01-07 09:56:42 PST
Created attachment 121554 [details] patch, with a reliable test case
Ryosuke Niwa
Comment 5 2012-01-07 11:37:00 PST
Comment on attachment 121554 [details] patch, with a reliable test case View in context: https://bugs.webkit.org/attachment.cgi?id=121554&action=review > Source/WebCore/ChangeLog:4 > + https://bugs.webkit.org/show_bug.cgi?id=75633 > + Layout Test fast/media/viewport-media-query.html is occasionally failing Bug summary should appear before the bug url. > Source/WebCore/ChangeLog:10 > + - Reset style selector on documentElement change. > + - Remove the code for lazy documentElement initialization. It is not an useful optimization, > + the children of Document rarely change. Could you also explain what was causing the occasional failure of viewport-media-query.html? > LayoutTests/ChangeLog:4 > + https://bugs.webkit.org/show_bug.cgi?id=75633 > + Layout Test fast/media/viewport-media-query.html is occasionally failing Ditto about the order.
Andreas Kling
Comment 6 2012-01-08 03:22:43 PST
Comment on attachment 121554 [details] patch, with a reliable test case r=me with a bit more pizzazz in the ChangeLog.
Antti Koivisto
Comment 7 2012-01-08 03:46:54 PST
Antti Koivisto
Comment 8 2012-01-08 10:52:17 PST
I can't repro the failure in fast/media/viewport-media-query.html but I think this is the same issue.
Note You need to log in before you can comment on or make changes to this bug.